--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,9 +1,11 @@
 .footer {
+    position: absolute;
+    bottom: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: row;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    height: 5em;
     border-top: 1px solid black;
     background-color: navy;
     width: 100%;
