--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -139,6 +139,7 @@
 
 .search-results-item:hover {
     background-color: lightgray;
+    border-radius: 20px;
     cursor: pointer;
 }
 
