--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -28,7 +28,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	/* line-height: 1; */
+	min-height: 100vh;
+	position: relative;
+	padding-bottom: 5em;
 }
 
 ol, ul {
