--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -3,6 +3,7 @@
     width: 600px;
     max-height: 100%;
     border-radius:2%;
+    padding-left: 5px;
 }
 
 .show-image-small {
